Harmony - Change textfield insets and height to match the spec.

This patch changes the horizontal textfield insets in Harmony to be 8pt,
and changes the height to be 28pt by default. The height pre-Harmony
is changed by 2pt because its preferred height was taking into account
the border height as well, which is now fixed.

Bug: 764019
Change-Id: Icce4cc6a0a0038ccb23077299475aca1415ff9b6